added english to student.html and index.html

--- a/tutor.html
+++ b/tutor.html
@@ -305,7 +305,7 @@
 
         function handleDownload() {
             const link = document.createElement('a');
-            link.href = 'https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf'; // Beispiel-PDF-Datei
+            link.href = 'https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf';
             link.download = 'Beispiel_Dokument.pdf';
             link.click();
         }
@@ -334,7 +334,6 @@
 
         function downloadAllSubmissions(taskName) {
             alert(`Alle Abgaben für ${taskName} werden heruntergeladen.`);
-            // Implementiere hier die Logik zum gleichzeitigen Herunterladen aller Abgaben.
         }
     </script>
 </body>
